--- a/pom.xml
+++ b/pom.xml
@@ -13,22 +13,26 @@
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <org.jsoup.version>1.15.3</org.jsoup.version>
+        <io.github.cdimascio.version>2.2.4</io.github.cdimascio.version>
+        <commons-codec.version>1.15</commons-codec.version>
+        <org.apache.maven.plugins.version>3.2.0</org.apache.maven.plugins.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.15.3</version>
+            <version>${org.jsoup.version}</version>
         </dependency>
         <dependency>
             <groupId>io.github.cdimascio</groupId>
             <artifactId>dotenv-java</artifactId>
-            <version>2.2.4</version>
+            <version>${io.github.cdimascio.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
-            <version>1.15</version>
+            <version>${commons-codec.version}</version>
         </dependency>
     </dependencies>
 
@@ -37,7 +41,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>${org.apache.maven.plugins.version}</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
